# markdown-vdb

./: .gitignore  .gitmodules  .markdownvdb.example  CLAUDE.md  Cargo.toml  Cross.toml  PROJECT.md  README.md  RELEASING.md  TECH.md  install.sh
.claude/: settings.json
.claude/commands/: build-app.md  publish-app.md  run-app.md
.github/workflows/: build-app.yml  release-cli.yml
docs/cli/: configuration.md  index.md  installation.md  json-output.md  quickstart.md  shell-completions.md
docs/guides/: agent-memory-graph.md  agent-memory.md
docs/prds/: ROADMAP.md  phase-1-foundation-config.md  phase-10-cli-library.md  phase-11-environment-vars-and-config.md  phase-12-cli-great.md  phase-13-file-tree-path-scoped-search.md  phase-14-hybrid-search.md  phase-15-link-graph.md  phase-16-settings-in-user-location.md  phase-17-interactive-ingest-progress.md  phase-18-time-decay.md  phase-19-concurrent-access.md  phase-19-decay-path-filtering.md  phase-2-markdown-parsing.md  phase-20-timing-breakdowns.md  (+17 more)
src/: chunker.rs  clustering.rs  config.rs  discovery.rs  error.rs  format.rs  fts.rs  ingest.rs  lib.rs  links.rs  logging.rs  main.rs  parser.rs  schema.rs  search.rs  tree.rs  update.rs  watcher.rs
test-vault/: .markdownvdb  .markdownvdb.schema.yml  .mdvdbignore
tests/: api_test.rs  chunker_test.rs  cli_test.rs  clustering_test.rs  collection_test.rs  config_test.rs  discovery_test.rs  edges_test.rs  embedding_test.rs  fts_test.rs  graph_test.rs  index_test.rs  ingest_test.rs  links_test.rs  parser_test.rs  schema_test.rs  search_test.rs  tree_test.rs  watcher_test.rs
(+129 files in other folders)
