[package]
name = "mdvdb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdvdb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "sync", "time", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pulldown-cmark = "0.12"
reqwest = { version = "0.12", features = ["json"] }
usearch = "2"
rkyv = { version = "0.8", features = ["bytecheck"] }
memmap2 = "0.9"
notify = "7"
notify-debouncer-full = "0.4"
sha2 = "0.10"
parking_lot = "0.12"
ndarray = "0.15"
linfa = "0.7"
linfa-clustering = "0.7"
tiktoken-rs = "0.6"
ignore = "0.4"
async-trait = "0.1"
futures = "0.3"
colored = "2"
regex = "1"
indicatif = "0.17"
tantivy = "0.22"
# clap_complete = "4" # TODO: re-enable when available offline

[dev-dependencies]
tempfile = "3"
serial_test = "3"
# assert_cmd = "2" # TODO: re-enable when available offline
# predicates = "3" # TODO: re-enable when available offline
